--- a/EcommerceMultiVendorNossoCloset/sourceCode/frontend-vite/index.html
+++ b/EcommerceMultiVendorNossoCloset/sourceCode/frontend-vite/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Zosh Bazaar</title>
+    <title>Nosso Closet</title>
 
         <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pacifico&display=swap"
